# gtk

./: Makefile.am  configure.ac
docs/reference/gtk/: gtk3-sections.txt  gtk3.types.in
gdk/: Makefile.am  gdkdisplaymanager.c  gdkframeclock.c  gdkframeclockidle.c  gdkwindow.c  gdkwindowimpl.h
gdk/mir/: Makefile.am  gdkapplaunchcontext-mir.c  gdkcursor-mir.c  gdkdevice-mir.c  gdkdisplay-mir.c  gdkdisplay-mir.h  gdkdnd-mir.c  gdkeventsource.c  gdkkeys-mir.c  gdkmir.h  gdkmirdevice.h  gdkmirdisplay.h  gdkmireventlistener.c  gdkmireventlistener.h  gdkmirselection.h  gdkmirwindow.h  gdkprivate-mir.h  gdkscreen-mir.c  gdkselection-mir.c  gdkwindow-mir.c
gdk/wayland/: gdkdevice-wayland.c  gdkeventsource.c  gdkwindow-wayland.c
gtk/: gtkactionmuxer.c  gtkactionmuxer.h  gtkapplication.c  gtkapplicationwindow.c  gtkbuilder.c  gtkmenutrackeritem.c  gtkwidget.c  gtkwindow.c
